<resources>
    <string name="app_name">ToolBox</string>


    <!-- Calculator -->
    <string name="calculator_text">Calculator</string>
    <!-- Calculator keys-->
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="number_zero">0</string>
    <string name="equation_sign">=</string>
    <string name="subtraction_sign">-</string>
    <string name="addition_sign">+</string>
    <string name="division_sign">/</string>
    <string name="multiplication_sign">x</string>
    <string name="clear_text">clear</string>
    <string name="delete_text">del</string>
    <string name="decimal_text">.</string>

</resources>
