<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:columnCount="4"
        app:rowCount="5">

        <toolbox.apps.clee.toolbox.launch.calculator.CalculatorButtonWidget
            android:text="@string/clear_text"
            android:id="@+id/clear_button"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <toolbox.apps.clee.toolbox.launch.calculator.CalculatorButtonWidget
            android:text="@string/division_sign"
            android:id="@+id/division_button"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <toolbox.apps.clee.toolbox.launch.calculator.CalculatorButtonWidget
            android:text="@string/multiplication_sign"
            android:id="@+id/multiplication_button"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <toolbox.apps.clee.toolbox.launch.calculator.CalculatorButtonWidget
            android:text="@string/delete_text"
            android:id="@+id/delete_button"
            app:layout_column="3"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <toolbox.apps.clee.toolbox.launch.calculator.CalculatorButtonWidget
            android:text="@string/number_one"
            android:id="@+id/one_button"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <toolbox.apps.clee.toolbox.launch.calculator.CalculatorButtonWidget
            android:text="@string/number_two"
            android:id="@+id/two_button"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <toolbox.apps.clee.toolbox.launch.calculator.CalculatorButtonWidget
            android:text="@string/number_three"
            android:id="@+id/three_button"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <toolbox.apps.clee.toolbox.launch.calculator.CalculatorButtonWidget
            android:text="@string/number_four"
            android:id="@+id/four_button"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1" />

        <toolbox.apps.clee.toolbox.launch.calculator.CalculatorButtonWidget
            android:text="@string/addition_sign"
            android:id="@+id/five_button"
            app:layout_column="3"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <toolbox.apps.clee.toolbox.launch.calculator.CalculatorButtonWidget
            android:text="@string/number_five"
            android:id="@+id/five_button"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1" />

        <toolbox.apps.clee.toolbox.launch.calculator.CalculatorButtonWidget
            android:text="@string/number_six"
            android:id="@+id/six_button"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1" />

        <toolbox.apps.clee.toolbox.launch.calculator.CalculatorButtonWidget
            android:text="@string/subtraction_sign"
            android:id="@+id/subtraction_button"
            app:layout_column="3"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1" />

        <toolbox.apps.clee.toolbox.launch.calculator.CalculatorButtonWidget
            android:text="@string/number_seven"
            android:id="@+id/seven_button"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="3"
            app:layout_rowWeight="1" />

        <toolbox.apps.clee.toolbox.launch.calculator.CalculatorButtonWidget
            android:text="@string/number_eight"
            android:id="@+id/eight_button"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="3"
            app:layout_rowWeight="1" />

        <toolbox.apps.clee.toolbox.launch.calculator.CalculatorButtonWidget
            android:text="@string/number_nine"
            android:id="@+id/nine_button"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="3"
            app:layout_rowWeight="1" />

        <toolbox.apps.clee.toolbox.launch.calculator.CalculatorButtonWidget
            android:text="@string/equation_sign"
            android:id="@+id/equation_button"
            app:layout_column="3"
            app:layout_columnWeight="1"
            app:layout_row="3"
            app:layout_rowSpan="2"
            app:layout_rowWeight="1" />

        <toolbox.apps.clee.toolbox.launch.calculator.CalculatorButtonWidget
            android:text="@string/number_zero"
            android:id="@+id/zero_button"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_columnWeight="1"
            app:layout_row="4"
            app:layout_rowWeight="1" />

        <toolbox.apps.clee.toolbox.launch.calculator.CalculatorButtonWidget
            android:text="@string/decimal_text"
            android:id="@+id/decimal_button"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="4"
            app:layout_rowWeight="1" />

    </android.support.v7.widget.GridLayout>
</layout>