<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.GridLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:columnCount="4"
        app:rowCount="5">
        <Button
            android:text="@string/clear_text"
            android:background="@drawable/calculator_buttons"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1"/>
        <Button
            android:text="@string/division_sign"
            android:background="@drawable/calculator_buttons"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1"/>
        <Button
            android:text="@string/multiplication_sign"
            android:background="@drawable/calculator_buttons"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1"/>
        <Button
            android:text="@string/delete_text"
            android:background="@drawable/calculator_buttons"
            app:layout_column="3"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1"/>

        <Button
            android:text="@string/number_one"
            android:background="@drawable/calculator_buttons"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1"/>

        <Button
            android:text="@string/number_two"
            android:background="@drawable/calculator_buttons"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1"/>

        <Button
            android:text="@string/number_three"
            android:background="@drawable/calculator_buttons"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1"/>

        <Button
            android:text="@string/number_four"
            android:background="@drawable/calculator_buttons"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1"/>

        <Button
            android:text="@string/plus_sign"
            android:background="@drawable/calculator_buttons"
            app:layout_column="3"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1"/>

        <Button
            android:text="@string/number_five"
            android:background="@drawable/calculator_buttons"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1"/>

        <Button
            android:text="@string/number_six"
            android:background="@drawable/calculator_buttons"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1"/>
        <Button
            android:text="@string/minus_sign"
            android:background="@drawable/calculator_buttons"
            app:layout_column="3"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1"/>

        <Button
            android:text="@string/number_seven"
            android:background="@drawable/calculator_buttons"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="3"
            app:layout_rowWeight="1"/>

        <Button
            android:text="@string/number_eight"
            android:background="@drawable/calculator_buttons"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="3"
            app:layout_rowWeight="1"/>

        <Button
            android:text="@string/number_nine"
            android:background="@drawable/calculator_buttons"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="3"
            app:layout_rowWeight="1"/>

        <Button
            android:text="@string/equal_sign"
            android:background="@drawable/calculator_buttons"
            app:layout_column="3"
            app:layout_columnWeight="1"
            app:layout_row="3"
            app:layout_rowSpan="2"
            app:layout_rowWeight="1"/>

        <Button
            android:text="@string/number_zero"
            android:background="@drawable/calculator_buttons"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_columnWeight="1"
            app:layout_row="4"
            app:layout_rowWeight="1"/>

        <Button
            android:text="@string/decimal_text"
            android:background="@drawable/calculator_buttons"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="4"
            app:layout_rowWeight="1"/>

    </android.support.v7.widget.GridLayout>
</layout>